Moving over config from my old blog

--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://blog.billweiss.net
+title: ~bV
+subtitle: One of these days, I'll actually keep with this blogging thing
+author: Bill Weiss
 simple_search: http://google.com/search
-description:
+description: (Mostly) Technical writings from Bill Weiss
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -63,13 +63,17 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: BillWeiss
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: BillWeiss
+twitter_tweet_count: 4
+twitter_show_replies: false
+twitter_follow_button: false
+twitter_show_follower_count: false
 twitter_tweet_button: true
 
 # Google +1
@@ -98,3 +102,8 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+# ServerFault Flair (adapted from
+# https://github.com/viggiosoft/stackoverflow-octopress)
+serverfault_user_name: bill-weiss
+serverfault_user_id: 4117
